# edge_buffering_experiments

./: .gitmodules  CMakeLists.txt  README.md  clean_implementation.py  cli.cc  cli.hpp  compare_treefiles.py  edge_buffer.cc  edge_buffer.hpp  options.cc  options.hpp  perftest.sh  plot.R  rng.cc  rng.hpp  run.py  run_eb.py  run_eb_multiple.py  run_streamlined.py  simulate.cc  simulate.hpp  sort_tables.cc  sort_tables.hpp  streamlined_prototype.py  tskit_tools.cc  tskit_tools.hpp  wfbuffered.cc  wright_fisher.py
benchmarking/: neutrality_benchmark.txt  neutrality_benchmark_rho.txt  neutrality_benchmark_rho_new_simplification.txt  neutrality_time_sorting.txt  plot_neutrality_benchmark.py  plot_neutrality_benchmark_rec.py  plot_neutrality_benchmark_rec_new_simplification.py  plot_neutrality_benchmark_simpler.py  plot_neutrality_time_spent_sorting.py  profile_neutrality.sh  quicktest.sh  quicktest_nonoverlapping.sh  run.sh  run_fwdpy11.py  run_rec.sh  slimulate.sh
slides/: nosorting.Rmd
